updated intro slides & added materials for session 2

--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ An alternative to RStudio Cloud is the new UofT JupyterHub/RStudio system. Go to
 
 #### Session 1 (Overview)
 
-* [Slides](r_intro.pdf)
+* [Slides](r_intro.pdf) (*updated*)
 * Code
     * Motivation Examples
         * Analyze portfolio performance (R Script: [performance_analysis.R](performance_analysis.R))
@@ -40,6 +40,16 @@ An alternative to RStudio Cloud is the new UofT JupyterHub/RStudio system. Go to
 * Reading list
     * [R for Data Science](https://r4ds.had.co.nz/) (Chapter 1 Intro, 4 Workflow: basics, 5 Data transformation, 6 Workflow: scripts, 8 Workflow: projects, 10 Tibbles, 11 Data import, 18 Pipes, 19 Functions, 20 Vectors, and 21 Iteration.)
 
+---
+
+#### Session 2 (Data Manipulation)
+
+* [Slides](r_data_manipulation.pdf)
+* Code
+    * Data Manipulation (R notebook: [![](colab-badge.svg)](https://colab.research.google.com/github/tdmdal/r-tutorial-202021-winter/blob/master/docs/part2_data_manipulation.ipynb))
+* Reading list
+    * [R for Data Science](https://r4ds.had.co.nz/) (Chapter 5 Data transformation, 12 Tidy data, and 13 Relational data.)
+    
 ---
 
 #### Free Resources
