--- a/index.Rmd
+++ b/index.Rmd
@@ -52,6 +52,21 @@ An alternative to RStudio Cloud is the new UofT JupyterHub/RStudio system. Go to
     
 ---
 
+#### Session 3 (Visualization)
+
+* [Slides](r_visualization.pdf)
+* Code
+    * Visualization: [ggplot](https://ggplot2.tidyverse.org/index.html)
+        * R notebook: [![](colab-badge.svg)](https://colab.research.google.com/github/tdmdal/r-tutorial-202122-winter/blob/master/docs/session_3/part3_visualization.ipynb)
+        * R markdown: [part3_visualization.Rmd](session_3/part3_visualization.Rmd) (Load this file in RStudio. Let's take this opportunity to learn about [R Markdown](https://rmarkdown.rstudio.com/lesson-1.html).)
+    * Visualization: [tidyquant charting](https://business-science.github.io/tidyquant/articles/TQ04-charting-with-tidyquant.html), [dygraph](https://rstudio.github.io/dygraphs/), and R markdown [flexdashboard](https://rmarkdown.rstudio.com/flexdashboard/)
+        * R script: [finance_charting.R](session_3/finance_charting.R)
+        * R markdown: [time_series_flexboard.Rmd](session_3/time_series_flexboard.Rmd) (Load this file in RStudio; HTML output: [time_series_flexboard.html](session_3/time_series_flexboard.html))
+* Reading list
+    * [R for Data Science](https://r4ds.had.co.nz/) (Chapter 3 Data visualization, 7 Exploratory Data Analysis (EDS), and 28 Graphics for communication.)
+        
+---
+
 #### Free Resources
 
 * R Programming
